@@ -888,6 +888,7 @@ let print_globdef oc (name, gdef) =
 
 let print_program oc p =
 (*  fprintf oc "	.fpu	vfp\n"; *)
+  PrintAnnot.print_version_and_options oc comment;
   Hashtbl.clear filename_num;
   List.iter (print_globdef oc) p.prog_defs
 
